Edited Introduction, Result, Discussion, fixed cross-reference

--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -9,6 +9,7 @@ date: today
 date-format: long
 abstract: "In an era where terrorism intersects with global politics, understanding its repercussions on public attitudes towards democracy is crucial. This paper replicates and extends the data analysis of effects of terrorism on public political opinion, considers various expressions of terrorism and a variety of research methodologies by analyzing findings from previous research. Our findings indicate that terrorism leads to an increase in outgroup hostility and a shift towards political conservatism, and observes variations in rally-'round-the-flag effects. These reactions are influenced by the nature of the terrorist threat and the sociopolitical context. Through this exploration, this paper contributes to the ongoing discourse on the implications of terrorism for democratic societies."
 format: pdf
+toc: true
 number-sections: true
 bibliography: references.bib
 ---
@@ -28,44 +29,52 @@ library(dplyr)
 
 # Introduction
 
-As we entered the 21st century, terrorism has emerged as a central concern in global politics, influencing international relations and shaping the societal landscape across the world. This phenomenon has not only reshaped diplomatic engagements but also transformed societal dynamics on a global scale which prompts a critical examination of terrorism's broader implications, particularly its impact on public attitudes towards democracy. In an with regular occurrence of terrorist incidents, the impact of terrorism on public opinion has emerged as a critical area of research, bringing up attention to how incidents of terrorism reshape public attitudes towards outgroup hostility, political conservatism, and national unity.
+In the 21st century, terrorism has emerged as a pivotal concern in global politics, influencing international relations and societal norms worldwide. The impact of terrorism necessitates comprehensive analysis, particularly regarding its influence on public attitudes towards democracy, outgroup hostility, political conservatism, and national unity. Despite the prevalence of terrorist incidents and their apparent effects on society, a critical gap remains in understanding how these events shape public opinion across different contexts.
 
-Building upon this foundation, our study aims to replicate and extend the analysis by *Amélie Godefroidt* in 2022, published in American Journal of Political Science [@Godefroidt202], which highlighted the significant impact of various forms of terrorism on public attitudes, from local insurgencies to global campaigns.
+This paper builds upon the foundational work of Amélie Godefroidt in 2022, published in the American Journal of Political Science [@Godefroidt2023], which highlighted the significant impact of terrorism on public attitudes. Our study aims to replicate and extend Godefroidt's analysis by examining the effects of various forms of terrorism on public sentiment, from domestic incidents to global terror campaigns. We use a meta-analytical approach, integrating findings from a broad spectrum of research to provide an overview of terrorism's impact on public opinion.
 
-This paper delves into the complex dynamics of terrorism's influence on public political opinion. It extends the discourse beyond conventional analysis to explore how various expressions of terrorism—ranging from domestic to international incidents—affect public attitudes, with a particular focus on outgroup hostility, political conservatism, and rally-'round-the-flag phenomena. Despite a growing body of research in this field, there remains a significant gap in understanding the holistic and nuanced effects of different forms of terrorism across diverse sociopolitical contexts. To address this gap, we systematically analyze and integrate findings from prior research, employing a variety of methodological approaches to offer a comprehensive overview of terrorism's impact on public sentiment.
+Our findings reveal that terrorism significantly influences public opinion, catalyzing a shift towards outgroup hostility and political conservatism, with varying effects on national unity. These shifts are contingent upon the nature of the terrorist threat and the specific sociopolitical context, underscoring the importance of contextual factors in public responses to terrorism. This research contributes to the ongoing discourse on terrorism's implications for democratic societies, offering empirical evidence of its subtle yet profound impact on public political attitudes. By elucidating the conditions under which terrorism most significantly affects public sentiment, this study aims to inform both policymakers and scholars, guiding the development of strategies to enhance democratic resilience in the face of terrorism.
 
-Our investigation reveals that terrorism indeed prompts significant shifts in public opinion, leading to an increase in outgroup hostility and a tilt towards political conservatism, alongside observable variations in national unity rallying effects. These reactions are found to be deeply influenced by the nature of the terrorist threat and the specific sociopolitical context in which they occur. The findings underscore the critical role of context in shaping public responses to terrorism, highlighting the importance of considering the diversity of terrorism expressions and the sociopolitical landscape when evaluating its impact.
+The paper is structured as follows: it begins with an overview of the methodological framework guiding our analysis in the Data section, followed by a presentation of our findings in the Results section. We then discuss these findings in the context of their broader implications for democracy and conclude with recommendations for future research and policy considerations in the Discussion section.
 
-This research contributes to the ongoing dialogue on the implications of terrorism for democratic societies by providing empirical evidence of terrorism's subtle yet significant influence on public political attitudes. By shedding light on the conditions under which terrorism most profoundly affects public sentiment, this paper aims to inform policymakers and scholars alike, guiding the development of strategies that bolster democratic resilience in the face of terror. This paper is organized as follows: an overview of the methodological framework used in our analysis, a presentation of the findings, a discussion contextualizing these results within the broader implications for democracy, and concluding remarks that suggest directions for future research and policy considerations.
+The paper is structured as follows: it begins with an overview of the methodological framework guiding our analysis in [Data section](#sec-data), followed by a presentation of our findings in [Results section](#sec-data-results). We then discuss these in the context of their broader implications for democracy and conclude with recommendations for future research and policy considerations in [Discussion section](#sec-data). 
 
 \newpage
 
 # Data {#sec-data}
 
 ## Source
-Our study is based on a detailed examination by Amélie Godefroidt published in 2022 in the American Journal of Political Science. This important research looks into how terrorism affects what people think about democracy and politics, using a wide range of examples from small local attacks to large international ones. We aim to do more research based on Godefroidt's work [@AmelieData], using her collection of data from 241 papers, which cover 326 studies and provide 1,733 measurements of how terrorism influences people's political views. This collection of information, gathered through careful research and organization, is the main resource for our study as we explore the complex effects of terrorism in different settings around the world.
+Our study is based on a detailed examination by Amélie Godefroidt published in 2022 in the American Journal of Political Science. This important research looks into how terrorism affects what people think about democracy and politics, using a wide range of examples from small local attacks to large international ones. We aim to do more research based on Godefroidt's work [@Godefroidt2023], using her collection of data from 241 papers, which cover 326 studies and provide 1,733 measurements of how terrorism influences people's political views. This collection of information, gathered through careful research and organization, is the main resource for our study as we explore the complex effects of terrorism in different settings around the world.
 
 ## Methodology
 Our approach to expanding on the original study involves a detailed process known as meta-analysis. This means we take a closer look at a bunch of studies already done on how terrorism changes people's opinions and combine their results to get a clearer picture. Following the steps outlined by Godefroidt, we gather, sort out, and examine data from various sources, focusing on 1,733 data points that show the relationship between terrorism and public opinion. We make sure all these points can be compared fairly by converting them into a standard format and adjusting them so they all point in the same direction. This makes our analysis strong and trustworthy. We also add new studies to the mix and use more sophisticated statistical methods to handle the data better, aiming to deepen our understanding of terrorism's impact on how people feel about democracy, strangers, and political beliefs in different parts of the world.
 
-We used the following functions: [@readxl], [@ggplot2], [@ggpubr], [@dplyr] in [@citeR] to create figure and analyze data.
+We used the following packages: `readxl` [@readxl], `ggplot2` [@ggplot2], `ggpubr` [@ggpubr], `dplyr` [@dplyr] in `R` [@citeR] to create figure and analyze data.
 
 \newpage
-# Results
+# Results {#sec-data}
 
-Our analysis, visualized in @fig-terrorism-trend, presents a multifaceted view of terrorism studies over the last three and a half decades.
+The results section analyses the research trends and diverse reactions to ideological terrorism, supported by two figures. The analysis begins with a detailed examination of the evolution in terrorism research over the past thirty-five years, highlighted by @fig-terrorism-trend, which showcases shifts in academic focus, data collection, and publication patterns in response to global terrorism events. Then we analyse on @fig-reactions-to-terrorism, which provides a nuanced view of how terrorism impacts political attitudes and public reactions across different ideologies, study designs, and geographical contexts. Through these visual representations, the section underscores the complexity of terrorism's societal impact and the importance of diversifying research approaches to fully understand its multifaceted nature.
 
-Temporal Trends in Data Collection and Publication Panel A: The Year of Data Collection indicates a notable increase in studies on terrorism following significant global events, such as the 9/11 attacks and the rise of the Islamic State (IS). These pivotal moments appear to catalyze research interest, suggesting a reactive pattern in the academic community to explore terrorism’s societal effects following high-profile incidents.
+## Comprehensive Review of Research Trends
+The set of graphs presented in @fig-terrorism-trend illustrate a multifaceted view of terrorism studies over the past thirty-five years. Each graph demonstrates different aspects and emphases in the study of terrorism, reflecting shifts in global events, academic focus, and thematic categorization. The results emphasize the reactive nature of terrorism research and the importance of diversifying the types of terrorism studied as well as the measures used to assess its impact.
+It is critical to understanding how the field is developing and where may need future attention.
 
-Panel B: Corroborating this trend, the Year of Publication shows a parallel surge in scholarly outputs, with peaks also corresponding to the aftermath of major terrorist events. The data implies that not only does the occurrence of terrorism prompt more research but also hastens the dissemination of findings, potentially reflecting an urgent need to understand and address the immediate impacts of these events.
+### Temporal Trends in Data Collection and Publication
 
-Variability in Terrorism Measures Panel C: The Terrorism Measures graph illustrates the diversity of metrics used to gauge terrorism’s impact. Acts of violence and threat exposure are the most commonly studied, indicating a research emphasis on direct experiences and perceptions of terrorism. Meanwhile, measures of fear and anger, while less frequent, point to an emerging interest in the affective responses terrorism elicits. As seen in Result 1 there is an economic impact in soul of the society which suggests that policymakers notice broader frightening society consequences of terrorist attacks state. Most probably, these measures will reveal the factors of economic disruption, decrease in productivity and infrastructure decomposition, emphasizing the smashed from many aspects impacts of terrorism on society. Through Result 2, the social cohesion indicators, such as relationship disruption and loss of the people's trust, become highly relevant and they show the fact that how any acts of terrorism can severely affect community bonds. This aspect of terrorism emphasizes on an understanding how violence influence the society that is beyond the immediate injuries and scars of the victims. Third, in the result section, the attention is on political aspects as the research has policy implications and encompasses the alterations made in the sphere of government policies, popular opinion and political discourse. This way terrorism becomes not only a state creation problem but also a challenge for structures of governance, and there grows a possibility of a new paradigm in political thinking about ideological conflicts and power redistributions.
+The Year of Data Collection graph (Panel A in @fig-terrorism-trend) illustrates the frequency of data collection efforts over time. The notable peak in the graph indicates a notable increase in terrorism research following significant global incidents, such as the 9/11 attacks and the rise of the Islamic State (IS). These moments stimulate the academic community to investigate the societal repercussions of terrorism following high-profile incidents. Similarly, the Year of Publications graph (Panel B in @fig-terrorism-trend) demonstrates a concurrent increase in the publication of scholarly works, with notable peaks following major terrorist occurrences. The lag between data collection and publication peaks may indicate the time taken for analysis and peer review. This graph underscores the reactive nature of academic publishing in response to terrorism, the understandings in response to the immediate effects of such incidents and increased potential for saturation of literature after major events.
 
-Diversity in Types of Terrorism Studied Panel D: The Type of Terrorism chart reveals an over- whelming focus on Islamist terrorism, overshadowing other ideologies and forms of terrorism. This skew suggests a potential blind spot in the literature, where state terror and extreme- right terrorism are relatively underexamined, despite their significance in certain regions and contexts.
+### Variability in Terrorism Measures
+
+The Terrorism Measures graph (Panel C in @fig-terrorism-trend) illustrates the diversity of metrics used to measure the impact terrorism. Acts of violence and threat exposure are the most commonly studied, indicating a research focus on direct experiences and perceptions of terrorism. In the meanwhile, it shows an emerging interest in the affective responses elicited by terrorism, even though fear and anger are expressed less frequently. These findings suggest a broader recognition of terrorism's  effects on economic disruptions, reduce productivity, and damage infrastructure, thereby reflecting the multifaceted societal impacts of terrorist.
+
+### Diversity in Types of Terrorism Studies
+
+The Type of Terrorism graph (Panel D in @fig-terrorism-trend) illustrates the focus of the academic and policy-making communities. It indicates an over-whelming focus on Islamist terrorism, overshadowing other ideologies and forms of terrorism. This skew suggests a potential blind spot in the literature, where state terror and extreme-right terrorism are relatively under-examined, despite their significance in certain regions and contexts. 
 
 ```{r }
 #| label: fig-terrorism-trend
-#| fig-cap: Summary of Data Included in the Meta-Analysis [@AmelieData]
+#| fig-cap: Summary of Data Included in the Meta-Analysis
 #| echo: false
 #| warning: false
 #| message: false
@@ -75,10 +84,38 @@ Diversity in Types of Terrorism Studied Panel D: The Type of Terrorism chart rev
 knitr::include_graphics("../../outputs/figures/Figure1.jpeg")
 ```
 
+\newpage
+## Diverse Reactions to Ideological Terrorism
+
+We use forest plot in @fig-reactions-to-terrorism to illustrate the relationship between terrorism and political attitudes varies by ideology, study design, sample type, and country context. It demonstrates the relationship between terrorism and political attitudes conditional on various substantive and methodological factors. The plot indicates that Islamist terrorism has a more pronounced effect on outgroup hostility, conservative ideological shifts, and rally effects compared to other ideologies. 
+
+We used the following additional packages: broom [@broom], dotwhisker [@dotwhisker], cowplot [@cowplot], metafor [@metafor] in R [@citeR] to create @fig-reactions-to-terrorism.
+
+### Outgroup Hostility
+This graph @fig-reactions-to-terrorism presents the Fisher's Z correlation coefficients for the effect of terrorism on outgroup hostility. It demonstrates that terrorism associated with Islamism tends to have a stronger correlation with outgroup hostility than other ideologies. This could reflect media portrayal and public perception biases, where Islamist are more closely associated with the concept of terrorism. The sample type and country also moderate the correlation, with general population samples showing a more substantial effect than student or convenience samples, and the United States showing a stronger correlation than Israel or other countries. In general, other ideologies, or the no ideological label, provoke less intense reactions, suggesting public sensitivity to the context of terrorist events.
+
+### Conservative Shift
+The second panel in @fig-reactions-to-terrorism of the forest plot illustrates the effect of terrorism on conservative ideological shifts. Again, the impact is most significant in the context of Islamist terrorism. The effect size is smaller across studies with other or no specified ideologies. Study design and sample type appear to influence the size of the conservative shift, with cross-sectional designs showing a smaller effect size compared to experimental or other designs. This suggests that the presence of a clear ideological motive in terrorism might be a key in changing public opinion towards conservative policies and viewpoints.
+
+### Rally Effects
+
+The third panel in @fig-reactions-to-terrorism of the forest plot illustrates the impact of terrorism on rally effects, which refers to the increased support for existing leadership following terrorist attacks. The data suggests that rally effects are more pronounced in studies examining Islamist terrorism. When examining the influence of research design, experimental designs showed a more marked rally effect compared to cross-sectional studies. This difference indicates that the controlled environment of an experiment, often simulating a direct terrorism threat, might amplify the unifying sentiment among the participants.
+
+
+### General Population vs. Targeted Samples
+
+The general population samples showed a more consistent increase in outgroup hostility and conservatism across the board, as opposed to student or convenience samples. This highlights the importance of sample representativeness in measuring accuracy public opinion in response to terrorism.
+
+### Geographic Variations
+The country-specific analysis revealed that the United States and Israel, both countries with prolonged experiences of terrorism, showed stronger correlations across all three measures compared to other countries. This may be attributed to the higher frequency of terrorist incidents and the consequent heightened public awareness and reaction in these nations.
+
+### Guilt-by-Association Effects
+Lastly, the 'Guilt-by-Association' section of @fig-reactions-to-terrorism provides an intriguing insight into how strong associations with terrorism significantly affect public attitudes, more important than moderate or no associations. This underscores the powerful role of narrative and association in shaping public sentiment post-terrorism.
+
 
 ```{r}
 #| label: fig-reactions-to-terrorism
-#| fig-cap: Relationship between Terrorism and Political Attitudes Conditional on Substantive and Methodological Factors [@AmelieData]
+#| fig-cap: Relationship between Terrorism and Political Attitudes Conditional on Substantive and Methodological Factors
 #| echo: false
 #| warning: false
 #| message: false
@@ -90,29 +127,28 @@ knitr::include_graphics("../../outputs/figures/Figure2.jpeg")
 
 \newpage
 
-# Discussion
+# Discussion {#sec-data}
 
-Investigation of terrorism’s effects through public attitudes towards politics is a necessity so that to detect the social reaction to such thought-provoking disasters. Starting from Amélie Godefroidt’s pioneering study (Godefroidt, 2023), this paper takes further her insights and tries to bring in more deterministic factors that may work towards shaping the public opinion related to terrorism. However, both Mia and I agree on the implications of ethic, limitations and future hopeful prospects.
-
+Investigating terrorism’s effects through public attitudes towards politics is necessary to detect the social reaction to such thought-provoking disasters. Starting from Amélie Godefroidt’s pioneering study (@Godefroidt2023), this paper takes her insights further and tries to bring in more deterministic factors that may work towards shaping public opinion related to terrorism. However, both Mia and I agree on the implications of ethics, limitations, and future hopeful prospects.
 ## Findings
 
-Our research proves to be only an addition to Godefroidt's theory, however our findings, obviously, point to direct effects of the terrorist acts on citizens' political attitudes. One striking feature here is that of hatred for the out-group members and political conservatism of the prublic following such catastrophies. This affirms that terror creates a feeling of insecurity and a need for JWen safety which is a reason for a more cautious political position. Also, our results put the emphasis on the way terrorism is shaped in influence of terrorism. For instance, ideological violence perpetrated in the name of Islam seems to have a tremendous amplifying impact and induces much stronger responses than violence underpinned by other ideologies. This in accord with former studies focusing on the specific consequences of Islamist extremism on Western countries that associate the latter with the idea of cultural and national identity. Thus it is considered as a threat to the civic and national identity.
+Our research proves to be only an addition to Godefroidt's theory; however, our findings clearly point to the direct effects of terrorist acts on citizens' political attitudes. One striking feature here is that of hatred for out-group members and political conservatism of the public following such catastrophes. This affirms that terror creates a feeling of insecurity and a need for safety, which is a reason for a more cautious political position. Also, our results put emphasis on the way terrorism is shaped in the influence of terrorism. For instance, ideological violence perpetrated in the name of Islam seems to have a tremendous amplifying impact and induces much stronger responses than violence underpinned by other ideologies. This is in accord with former studies focusing on the specific consequences of Islamist extremism on Western countries that associate the latter with the idea of cultural and national identity. Thus, it is considered a threat to civic and national identity.
 
 ## Ethical Implications and Bias
 
-Studying terrorism from the ethical dimension proves it cannot be underestimated. Being the such consequence causing sensitive part of the topic, and its role for evoking and spreading fear and xenophobia, the scientists should handle it with specific techniques. An application of rigorous meta-analysis methodology assures reliable inquiry, lack of harm, and the polysemic exploration of the problem of the correlation between terrorism and political attitudes. Nevertheless, it should be acknowledged that the existence of bias is one of the key challenges that could be connected with the initial studies in our analysis. For an example, each victim is likely to be bombarded over the media and end up being Islamist terrorism which is highly visible in media coverage and public discourse. Albeit, while one dimension of ideological violence may not be accurately portrayed, other forms such as far-right extremism or eco-terrorism may not be sufficiently emphasized. Such dyads are likely to find themselves in a arena in which distorted views will dominate and the situation will be perceived far from its true scale.
+Studying terrorism from an ethical dimension proves it cannot be underestimated. Being such a consequence-causing sensitive part of the topic, and its role in evoking and spreading fear and xenophobia, scientists should handle it with specific techniques. An application of rigorous meta-analysis methodology assures reliable inquiry, lack of harm, and the polysemic exploration of the problem of the correlation between terrorism and political attitudes. Nevertheless, it should be acknowledged that the existence of bias is one of the key challenges that could be connected with the initial studies in our analysis. For example, each victim is likely to be bombarded over the media and end up being associated with Islamist terrorism, which is highly visible in media coverage and public discourse. Albeit, while one dimension of ideological violence may not be accurately portrayed, other forms such as far-right extremism or eco-terrorism may not be sufficiently emphasized. Such dyads are likely to find themselves in an arena in which distorted views will dominate and the situation will be perceived far from its true scale.
 
 ## Limitations
 
-In addition to the implemented design in order to realize the highest accuracy of a meta-analysis, we faced several limitations, limiting the range and generality of our findings. Our approach which heavily depends on a secondary data is unable to control for all the conﬂounding variables that may be influential, such as socio-economic class or psychological characteristics of the individual. Furthermore, the use of published sources may leave room for the ‘file drawer’ effect wherein studies with positive results are likely to be published while studies with no significant effect are simply left in the drawer.
+In addition to the implemented design in order to realize the highest accuracy of a meta-analysis, we faced several limitations, limiting the range and generality of our findings. Our approach, which heavily depends on secondary data, is unable to control for all the confounding variables that may be influential, such as socio-economic class or psychological characteristics of the individual. Furthermore, the use of published sources may leave room for the ‘file drawer’ effect, wherein studies with positive results are likely to be published while studies with no significant effect are simply left in the drawer.
 
 ## Future Research
 
-In order to rectify these limitations as well as bring clarity into how terrorism changes the political views of a society, there should be an all round approach for the research. At first, applying primary data collection methods, e.g. surveys or interviews, is a good idea since it can bring you concrete views of how people behave in terrible situations. This will ultimately allow the scientists to enable the research system to explore intricacies and contextual factors which may not be available in the datasets that currently exist. In addition, the issue must be viewed from a wider angle, not being limited only to a single terrorist ideology but covering the broad spectrum of ideologies. Our primary target however revolves around Islamist terrorism alone, yet the other extreme movements for instance, right- or left-wing extremism also deserve attention. It is critical for the success of counterterrorism policies and social unity that the concerns are comprehensively analyzed re the ideologies that shape the views of the mass public and the political attitudes. Moreover, as terrorism is seen in many contexts other than the Western world, exploring this issue will contribute to a deeper global comprehension. Terrorism being a very much issues based on the diversity of cultures, societies and their political emotions is not the same across the world. Years long longitudinal studies which track individuals perceptions overtime will provide a wealth of information to the long term effects of terrorism, to name some of these as a mention, radicalization, resilience and social transformation.
+To rectify these limitations as well as bring clarity into how terrorism changes the political views of a society, there should be an all-around approach to the research. At first, applying primary data collection methods, e.g., surveys or interviews, is a good idea since it can bring you concrete views of how people behave in terrible situations. This will ultimately allow the scientists to enable the research system to explore intricacies and contextual factors which may not be available in the datasets that currently exist. In addition, the issue must be viewed from a wider angle, not being limited only to a single terrorist ideology but covering the broad spectrum of ideologies. Our primary target, however, revolves around Islamist terrorism alone, yet other extreme movements, for instance, right- or left-wing extremism, also deserve attention. It is critical for the success of counterterrorism policies and social unity that the concerns are comprehensively analyzed regarding the ideologies that shape the views of the mass public and the political attitudes. Moreover, as terrorism is seen in many contexts other than the Western world, exploring this issue will contribute to a deeper global comprehension. Terrorism, being very much an issue based on the diversity of cultures, societies, and their political emotions, is not the same across the world. Years-long longitudinal studies which track individuals' perceptions over time will provide a wealth of information on the long-term effects of terrorism, to name some of these as a mention, radicalization, resilience, and social transformation.
 
-## Conclusion
+# Conclusion
 
-In conclusion,, the work offer a new insight into what the influence of terrorism on political attitudes was in the past. Our research replicates Godefroidt's study while trying to expand on it. This is to drive home the fact that terrorists are always a constant factor in the society with their potentially dangerous ideologies. Furthermore, there is the endless ethical and biases topic which is very sensitive and proposing lanes for future research for the same problem is well thought out.
+In conclusion, the work offers new insight into what the influence of terrorism on political attitudes was in the past. Our research replicates Godefroidt's study while trying to expand on it. This is to drive home the fact that terrorists are always a constant factor in society with their potentially dangerous ideologies. Furthermore, there is the endless ethical and bias topic which is very sensitive and proposing lanes for future research on the same problem is well thought out.
 
 \newpage
 
