--- a/outputs/paper/paper.qmd
+++ b/outputs/paper/paper.qmd
@@ -144,11 +144,13 @@ In addition to the implemented design in order to realize the highest accuracy o
 
 ## Future Research
 
-To rectify these limitations as well as bring clarity into how terrorism changes the political views of a society, there should be an all-around approach to the research. At first, applying primary data collection methods, e.g., surveys or interviews, is a good idea since it can bring you concrete views of how people behave in terrible situations. This will ultimately allow the scientists to enable the research system to explore intricacies and contextual factors which may not be available in the datasets that currently exist. In addition, the issue must be viewed from a wider angle, not being limited only to a single terrorist ideology but covering the broad spectrum of ideologies. Our primary target, however, revolves around Islamist terrorism alone, yet other extreme movements, for instance, right- or left-wing extremism, also deserve attention. It is critical for the success of counterterrorism policies and social unity that the concerns are comprehensively analyzed regarding the ideologies that shape the views of the mass public and the political attitudes. Moreover, as terrorism is seen in many contexts other than the Western world, exploring this issue will contribute to a deeper global comprehension. Terrorism, being very much an issue based on the diversity of cultures, societies, and their political emotions, is not the same across the world. Years-long longitudinal studies which track individuals' perceptions over time will provide a wealth of information on the long-term effects of terrorism, to name some of these as a mention, radicalization, resilience, and social transformation.
+To rectify these limitations as well as bring clarity into how terrorism changes the political views of a society, there should be an all-around approach to the research. At first, applying primary data collection methods, e.g., surveys or interviews, is a good idea since it can bring you concrete views of how people behave in terrible situations. This will ultimately allow the scientists to enable the research system to explore intricacies and contextual factors which may not be available in the datasets that currently exist. In addition, the issue must be viewed from a wider angle, not being limited only to a single terrorist ideology but covering the broad spectrum of ideologies. Our primary target, however, revolves around Islamist terrorism alone, yet other extreme movements, for instance, right- or left-wing extremism, also deserve attention. It is critical for the success of counterterrorism policies and social unity that the concerns are comprehensively analyzed regarding the ideologies that shape the views of the mass public and the political attitudes. Moreover, as terrorism is seen in many contexts other than the Western world, exploring this issue will contribute to a deeper global comprehension. Terrorism, being very much an issue based on the diversity of cultures, societies, and their political emotions, is not the same across the world. Years-long longitudinal studies which track individuals' perceptions over time will provide a wealth of information on the long-term effects of terrorism, to name some of these as a mention, radicalization, resilience, and social transformation. This brings up the fact that terrorists are always a constant factor in society with their potentially dangerous ideologies. Furthermore, there is the endless ethical and bias topic which is very sensitive and proposing lanes for future research on the same problem is well thought out.
+
+\newpage
 
 # Conclusion
 
-In conclusion, the work offers new insight into what the influence of terrorism on political attitudes was in the past. Our research replicates Godefroidt's study while trying to expand on it. This is to drive home the fact that terrorists are always a constant factor in society with their potentially dangerous ideologies. Furthermore, there is the endless ethical and bias topic which is very sensitive and proposing lanes for future research on the same problem is well thought out.
+Our study builds upon and extends the insightful work of Amélie Godefroidt (@Godefroidt2023), presenting new perspectives on the influence of terrorism on political attitudes. Through comprehensive analysis and extension of previous research, it highlights the significant ways in which terrorism leads shifts towards outgroup hostility, political conservatism, and affects public opinion across various contexts. This paper underscores the importance of considering the sociopolitical environment when evaluating the impact of terrorism and suggests a nuanced understanding of its effects is important for formulating policies. In moving forward, we suggest an inclusive approach to research that encompasses a broader spectrum of terrorist ideologies and embraces different methodologies to capture the influence of terrorism in our society. This approach not only contributes to the academic discussion on terrorism and democracy but also offers practical insights for policymakers to navigate the challenges posed by terrorism.
 
 \newpage
 
